fix open detail no scrollbar issue

--- a/zul/src/archive/web/js/zul/box/less/box.less
+++ b/zul/src/archive/web/js/zul/box/less/box.less
@@ -122,11 +122,11 @@ tr.z-splitter-outer > td {
 	.z-splitter-icon {
 		position: absolute;
 		font-size: @fontSizeXSmall;
-		top: -3px;
+		top: -4px;
 		left: 11px;
 	}
 	.z-splitter-icon.z-icon-ellipsis-horizontal {
-		top: -2px;
+		top: -3px;
 		left: -20px;
 		cursor: s-resize;
 	}
