--- a/zul/src/archive/web/zul/less/norm.less
+++ b/zul/src/archive/web/zul/less/norm.less
@@ -526,11 +526,11 @@ span.z-upload input {
 					width: @baseIconWidth;
 					height: @baseIconHeight;
 					position: absolute;
-					left: -2px;
+					left: -1px;
 					top: 50%;
 					margin-top: -8px;
 					color: @iconColor;
-					.transform('scale(0.5, 0.7)');
+					.transform('scale(0.6, 0.9)');
 				}
 			}
 			.z-scrollbar-rail {
